# random-python

./: README.md  pyproject.toml
src/random_python/: ClasseAleatoria.py  ClasseRandom.py  main.py
tests/: test_ClasseRandom.py
